3.0.1
	Fix timespamp on sparc64 (Gert Doering)
	Fix dependency in rc-bsd.sh: it's mail, not sendmail
	Fix crashes when running with -D on some systems (John Thiltges)
3.0
	Fix crashes during dump reloads (AIDA Shinra)
	Fix DoS in MX sync protocol (AIDA Shinra)
3.0rc6
	Check for -lc_r before others, for FreeBSD (AIDA Shinra)
	Fix configure for libspf2 (AIDA Shinra)
	Fix FreeBSD build (AIDA Shinra)
	Avoid buffer overflow in DNSRBL code (AIDA Shinra)
	Fix build problem with newer BerkeleyDB (AIDA Shinra) 
	Check if -lbind requires -lpthread, for Linux
3.0rc5
	Pointer to DRAC documentation (Matthias Scheler)
	FreeBSD build fixes (Hajimu UMEMOTO)
	Remove the /tmp/access-list.debug for security sake (AIDA Shinra)
	Correctly enable non blocking I/O fox MX sync (Attila Bruncsak)
3.0rc4
	Updated the list of broken MTA
	Fix MX sync between Tru64 and Linux (Attila Bruncsak)
	Fix display bug in log messages (AIDA Shinra)
3.0rc3
	Silly build fix for platforms that lack vsyslog()
3.0rc2
	Honour LINE_MAX for syslog (Attila Bruncsak)
	fix MX sync again on Tru64 (Attila Bruncsak)
3.0rc1
	Warn about ignored ACL lines after acl default rule
	Small documentation fix (Leena Heino)
	Fix automatic config reload
3.0a6
	Fix serious bugs in macro handling (AIDA Shinra)
	Back out race conditions fixes (too intrusive, will be back in 3.1.x)
	Fix build warning on Tru64
	Build fix on Solaris
3.0a5
	Build fix on Tru64, fix MX sync (Attila Bruncsak)
	Fix various race conditions (AIDA Shinra)
3.0a4
	IPv6 and build fixes (Hajimu UMEMOTO)
3.0a3
	Fix --disable-drac and --disable-dnsrbl (Fabien Tassin)
	Add support to use Sendmail macros in the ACL
	Remove the need of LOG_PERROR, make sure no log is missed
	Make sure -c tells what happens and return an usable exit code
3.0a2
	Documentation fix about required sendmail macros
	Missing bit in rc-redhat.sh (Jobst Schmalenbach)
	Fix bugs that prevented IPv6 addresses resolution
	Add more log output for blackist and flushaddr (Fabien Tassin)