@@ -2,7 +2,7 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Build environnement */
-#define BUILD_ENV "manu@plan:/wd1a/home/manu/milter-greylist-3-0 Mon Nov 20 21:50:45 CET 2006"
+#define BUILD_ENV "manu@melancolie:/home/manu/milter-greylist-3 Mon Jan 22 15:58:43 CET 2007"
 
 /* Define to 1 if you have the <arpa/inet.h> header file. */
 #define HAVE_ARPA_INET_H 1
@@ -166,13 +166,13 @@
 #define PACKAGE_NAME "milter-greylist"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "milter-greylist 3.0"
+#define PACKAGE_STRING "milter-greylist 3.0.1b1"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "milter-greylist"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "3.0"
+#define PACKAGE_VERSION "3.0.1b1"
 
 /* Define to 1 if the C compiler supports function prototypes. */
 #define PROTOTYPES 1
